cleanup assets structure

--- a/en/index.html
+++ b/en/index.html
@@ -1470,14 +1470,14 @@
 
   <!-- SPLASH SCREEN -->
   <div class="splash-screen" id="splashScreen">
-        <img src="../assets/HH logo.png" alt="Healthy Habits">
+        <img src="../assets/logo/HH logo.png" alt="Healthy Habits">
   </div>
 
   <!-- TOPBAR -->
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="../nieuw-2025.html"><img src="../assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="../nieuw-2025.html"><img src="../assets/logo/HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="../ons-aanbod.html">Our Offer</a>
@@ -1499,7 +1499,7 @@
 
   <!-- HERO -->
   <header class="hero">
-    <img src="../assets/intake.jpg" alt="Healthy Habits atmosphere">
+    <img src="../assets/images/home/intake.jpg" alt="Healthy Habits atmosphere">
     <div class="hero__overlay"></div>
     <div class="container hero-content">
       <h1>Warm. Personal. Results-driven.</h1>
@@ -1551,27 +1551,27 @@ and who knows, just like many others, you might even start enjoying it.</p>
           <div class="aanbod-carousel-slides" id="aanbodSlides">
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="../assets/foto's aanbod/fitness.jpg" alt="Fitness" loading="lazy">
+                <img src="../assets/images/aanbod/fitness.jpg" alt="Fitness" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="../assets/foto's aanbod/milon.jpg" alt="Milon" loading="lazy">
+                <img src="../assets/images/aanbod/milon.jpg" alt="Milon" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="../assets/foto's aanbod/yoga.jpeg" alt="Yoga" loading="lazy">
+                <img src="../assets/images/aanbod/yoga.jpeg" alt="Yoga" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="../assets/foto's aanbod/sauna.jpg" alt="Sauna" loading="lazy">
+                <img src="../assets/images/aanbod/sauna.jpg" alt="Sauna" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="../assets/foto's aanbod/groepsles.jpg" alt="Group classes" loading="lazy">
+                <img src="../assets/images/aanbod/groepsles.jpg" alt="Group classes" loading="lazy">
               </div>
             </div>
           </div>
@@ -1648,7 +1648,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
           <div class="card">
             <div class="card__header" data-step="1">Step 1</div>
             <div class="card__media">
-              <img src="../assets/foto's onze aanpak /1.jpeg" alt="Intake" loading="lazy">
+              <img src="../assets/images/onze-aanpak/1.jpeg" alt="Intake" loading="lazy">
           </div>
             <div class="card__body">
               <h3>Step 1 – No-obligation intake</h3>
@@ -1658,7 +1658,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
           <div class="card">
             <div class="card__header" data-step="2">Step 2</div>
             <div class="card__media">
-              <img src="../assets/foto's onze aanpak /2.jpeg" alt="Results" loading="lazy">
+              <img src="../assets/images/onze-aanpak/2.jpeg" alt="Results" loading="lazy">
             </div>
             <div class="card__body">
               <h3>Step 2 – Guidance & evaluation</h3>
@@ -1668,7 +1668,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
           <div class="card">
             <div class="card__header" data-step="3">Step 3</div>
             <div class="card__media">
-              <img src="../assets/foto's onze aanpak /3.jpeg" alt="Rhythm" loading="lazy">
+              <img src="../assets/images/onze-aanpak/3.jpeg" alt="Rhythm" loading="lazy">
             </div>
             <div class="card__body">
               <h3>Step 3 – Healthy Habit</h3>
@@ -1696,7 +1696,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
             <div class="reviews-carousel-slides" id="reviewsSlides">
               <div class="review-card active">
                 <div class="review-card__image">
-                  <img src="../assets/resultaatkaartjes/slide 1.jpeg" alt="Review" loading="lazy">
+                  <img src="../assets/images/resultaten/slide 1.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Pieter</h3>
@@ -1714,7 +1714,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="../assets/resultaatkaartjes/slide 2.jpeg" alt="Review" loading="lazy">
+                  <img src="../assets/images/resultaten/slide 2.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Name</h3>
@@ -1732,7 +1732,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="../assets/resultaatkaartjes/IMG_5025.jpeg" alt="Review" loading="lazy">
+                  <img src="../assets/images/resultaten/IMG_5025.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Name</h3>
@@ -1750,7 +1750,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="../assets/resultaatkaartjes/IMG_5611 2.jpeg" alt="Review" loading="lazy">
+                  <img src="../assets/images/resultaten/IMG_5611 2.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Name</h3>
@@ -1768,7 +1768,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="../assets/resultaatkaartjes/IMG_6968.jpeg" alt="Review" loading="lazy">
+                  <img src="../assets/images/resultaten/IMG_6968.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Name</h3>
@@ -1786,7 +1786,7 @@ and who knows, just like many others, you might even start enjoying it.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="../assets/resultaatkaartjes/IMG_6976.jpeg" alt="Review" loading="lazy">
+                  <img src="../assets/images/resultaten/IMG_6976.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Name</h3>
