--- a/index.html
+++ b/index.html
@@ -522,13 +522,13 @@
       background-repeat:no-repeat;
     }
     .card__header[data-step="1"] ~ .card__media{
-      background-image:url("assets/foto's onze aanpak/roos1.jpg");
+      background-image:url("assets/images/onze-aanpak/roos1.jpg");
     }
     .card__header[data-step="2"] ~ .card__media{
-      background-image:url("assets/foto's onze aanpak/roos2.jpg");
+      background-image:url("assets/images/onze-aanpak/roos2.jpg");
     }
     .card__header[data-step="3"] ~ .card__media{
-      background-image:url("assets/foto's onze aanpak/roos3.jpg");
+      background-image:url("assets/images/onze-aanpak/roos3.jpg");
     }
     .card__media img{
       display:none;
@@ -1480,14 +1480,14 @@
 
   <!-- SPLASH SCREEN -->
   <div class="splash-screen" id="splashScreen">
-    <img src="assets/HH logo.png" alt="Healthy Habits">
+    <img src="assets/logo/HH logo.png" alt="Healthy Habits">
   </div>
 
   <!-- TOPBAR -->
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="assets/logo/HH logo.png" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="ons-aanbod.html">Ons aanbod</a>
@@ -1509,7 +1509,7 @@
 
   <!-- HERO -->
   <header class="hero">
-    <img src="assets/intake.jpg" alt="Healthy Habits sfeer">
+    <img src="assets/images/home/intake.jpg" alt="Healthy Habits sfeer">
     <div class="hero__overlay"></div>
     <div class="container hero-content">
       <h1>Warm. Persoonlijk. Resultaatgericht.</h1>
@@ -1561,27 +1561,27 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
           <div class="aanbod-carousel-slides" id="aanbodSlides">
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/fitness.jpg" alt="Fitness" loading="lazy">
+                <img src="assets/images/aanbod/fitness.jpg" alt="Fitness" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/milon.jpg" alt="Milon" loading="lazy">
+                <img src="assets/images/aanbod/milon.jpg" alt="Milon" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/yoga.jpeg" alt="Yoga" loading="lazy">
+                <img src="assets/images/aanbod/yoga.jpeg" alt="Yoga" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/sauna.jpg" alt="Sauna" loading="lazy">
+                <img src="assets/images/aanbod/sauna.jpg" alt="Sauna" loading="lazy">
               </div>
             </div>
             <div class="aanbod-card">
               <div class="aanbod-card__image">
-                <img src="assets/foto's aanbod/groepsles.jpg" alt="Groepslessen" loading="lazy">
+                <img src="assets/images/aanbod/groepsles.jpg" alt="Groepslessen" loading="lazy">
               </div>
             </div>
           </div>
@@ -1702,7 +1702,7 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
             <div class="reviews-carousel-slides" id="reviewsSlides">
               <div class="review-card active">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/slide 1.jpeg" alt="Review" loading="lazy">
+                  <img src="assets/images/resultaten/slide 1.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Pieter</h3>
@@ -1720,7 +1720,7 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/slide 2.jpeg" alt="Review" loading="lazy">
+                  <img src="assets/images/resultaten/slide 2.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Naam</h3>
@@ -1738,7 +1738,7 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_5025.jpeg" alt="Review" loading="lazy">
+                  <img src="assets/images/resultaten/IMG_5025.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Naam</h3>
@@ -1756,7 +1756,7 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_5611 2.jpeg" alt="Review" loading="lazy">
+                  <img src="assets/images/resultaten/IMG_5611 2.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Naam</h3>
@@ -1774,7 +1774,7 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_6968.jpeg" alt="Review" loading="lazy">
+                  <img src="assets/images/resultaten/IMG_6968.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Naam</h3>
@@ -1792,7 +1792,7 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
 
               <div class="review-card">
                 <div class="review-card__image">
-                  <img src="assets/resultaatkaartjes/IMG_6976.jpeg" alt="Review" loading="lazy">
+                  <img src="assets/images/resultaten/IMG_6976.jpeg" alt="Review" loading="lazy">
                 </div>
                 <div class="review-card__content">
                   <h3 class="review-card__name">Naam</h3>
