--- a/en/succesverhalen.html
+++ b/en/succesverhalen.html
@@ -215,7 +215,7 @@
   <div class="topbar">
     <div class="container">
       <a href="nieuw-2025.html" class="topbar__logo">
-        <img src="assets/HH logo.png" alt="Healthy Habits">
+        <img src="../assets/logo/HH logo.png" alt="Healthy Habits">
       </a>
       <nav class="topbar__nav">
         <a href="ons-aanbod.html">Ons aanbod</a>
