add zapier webhook to all forms

--- a/en/index.html
+++ b/en/index.html
@@ -1868,7 +1868,8 @@ and who knows, just like many others, you might even start enjoying it.</p>
           <div class="form-header">
             <h2>Let's get to know each other</h2>
           </div>
-          <form class="form" action="#" method="POST">
+          <form class="form" action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST">
+            <input type="hidden" name="formulier" value="intake">
             <div class="form-group">
   <label style="font-weight:normal;">
     <div style="color:var(--muted);margin-bottom:8px;font-weight:normal;">At Healthy Habits, we do things a little differently.</div>
