--- a/index.html
+++ b/index.html
@@ -1874,7 +1874,8 @@ en wie weet wordt sporten, net als bij velen, zelfs leuk.</p>
           <div class="form-header">
             <h2>Laten we kennis maken</h2>
           </div>
-          <form class="form" action="#" method="POST">
+          <form class="form" action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST">
+            <input type="hidden" name="formulier" value="intake">
             <div class="form-group">
   <label style="font-weight:normal;">
     <div style="color:var(--muted);margin-bottom:8px;font-weight:normal;">Bij Healthy Habits gaat het net even anders.</div>
