Fix 4 weken formulier definitief (Zapier)

--- a/4-weken-proberen.html
+++ b/4-weken-proberen.html
@@ -363,24 +363,29 @@
       <h1>4 weken proberen bij Healthy Habits</h1>
       <p class="hero-intro">Waarom alleen horen wat we te bieden hebben, als je het ook zelf kunt ervaren?</p>
       <div class="hero-form-wrapper">
-        <form class="form" action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST">
+        <form action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST" class="form">
           <input type="hidden" name="form_name" value="4-weken-proberen">
+
           <div class="form-group">
-            <label for="voornaam">Voornaam *</label>
-            <input type="text" id="voornaam" name="voornaam" placeholder="Je voornaam" required>
+            <label>Voornaam</label>
+            <input type="text" name="voornaam" required>
           </div>
+
           <div class="form-group">
-            <label for="achternaam">Achternaam *</label>
-            <input type="text" id="achternaam" name="achternaam" placeholder="Je achternaam" required>
+            <label>Achternaam</label>
+            <input type="text" name="achternaam" required>
           </div>
+
           <div class="form-group">
-            <label for="telefoon">Telefoon *</label>
-            <input type="tel" id="telefoon" name="telefoon" placeholder="06 12345678" required>
+            <label>Telefoon</label>
+            <input type="tel" name="telefoon" required>
           </div>
+
           <div class="form-group">
-            <label for="email">E-mail *</label>
-            <input type="email" id="email" name="email" placeholder="je@voorbeeld.nl" required>
+            <label>E-mail</label>
+            <input type="email" name="email" required>
           </div>
+
           <button type="submit" class="form-submit">Start mijn 4 weken</button>
           <p class="form-note">Vrijblijvend · geen automatische inschrijving · persoonlijk contact</p>
         </form>
