--- a/4-weken-proberen.html
+++ b/4-weken-proberen.html
@@ -158,10 +158,6 @@
       margin-right:auto;
       line-height:1.5;
     }
-    .hero-form-wrapper{
-      max-width:600px;
-      margin:0 auto;
-    }
     .hero-section .form{
       background:rgba(255,255,255,.04);
       border:1px solid var(--line);
@@ -258,7 +254,8 @@
     .form-group input::placeholder{
       color:rgba(255,255,255,.4);
     }
-    .form-submit{
+    .form-submit,
+    .btn-primary{
       width:100%;
       padding:14px 24px;
       background:var(--accent);
@@ -271,7 +268,8 @@
       transition:filter 0.2s ease;
       margin-top:8px;
     }
-    .form-submit:hover{
+    .form-submit:hover,
+    .btn-primary:hover{
       filter:brightness(1.1);
     }
     .form-note{
@@ -362,34 +360,31 @@
     <div class="container">
       <h1>4 weken proberen bij Healthy Habits</h1>
       <p class="hero-intro">Waarom alleen horen wat we te bieden hebben, als je het ook zelf kunt ervaren?</p>
-      <div class="hero-form-wrapper">
-        <form action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST" class="form">
-          <input type="hidden" name="form_name" value="4-weken-proberen">
+      <form action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST" class="form">
+        <input type="hidden" name="form_name" value="4-weken-proberen">
 
-          <div class="form-group">
-            <label>Voornaam</label>
-            <input type="text" name="voornaam" required>
-          </div>
+        <div class="form-group">
+          <label for="voornaam">Voornaam *</label>
+          <input id="voornaam" type="text" name="voornaam" required>
+        </div>
 
-          <div class="form-group">
-            <label>Achternaam</label>
-            <input type="text" name="achternaam" required>
-          </div>
+        <div class="form-group">
+          <label for="achternaam">Achternaam *</label>
+          <input id="achternaam" type="text" name="achternaam" required>
+        </div>
 
-          <div class="form-group">
-            <label>Telefoon</label>
-            <input type="tel" name="telefoon" required>
-          </div>
+        <div class="form-group">
+          <label for="telefoon">Telefoon *</label>
+          <input id="telefoon" type="tel" name="telefoon" required>
+        </div>
 
-          <div class="form-group">
-            <label>E-mail</label>
-            <input type="email" name="email" required>
-          </div>
+        <div class="form-group">
+          <label for="email">E-mail *</label>
+          <input id="email" type="email" name="email" required>
+        </div>
 
-          <button type="submit" class="form-submit">Start mijn 4 weken</button>
-          <p class="form-note">Vrijblijvend · geen automatische inschrijving · persoonlijk contact</p>
-        </form>
-      </div>
+        <button type="submit" class="btn-primary">Start mijn 4 weken</button>
+      </form>
     </div>
   </section>
 
