Fix 4-weken-proberen form action to Zapier

--- a/4-weken-proberen.html
+++ b/4-weken-proberen.html
@@ -360,7 +360,7 @@
     <div class="container">
       <h1>4 weken proberen bij Healthy Habits</h1>
       <p class="hero-intro">Waarom alleen horen wat we te bieden hebben, als je het ook zelf kunt ervaren?</p>
-      <form action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST" class="form">
+      <form class="form" action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST">
         <input type="hidden" name="form_name" value="4-weken-proberen">
 
         <div class="form-group">
