--- a/4-weken-proberen.html
+++ b/4-weken-proberen.html
@@ -358,7 +358,7 @@
   <!-- HERO -->
   <section class="hero-section">
     <div class="container">
-      <h1>4 weken proberen bij Healthy Habits</h1>
+      <h1 style="color:blue;">4 weken proberen bij Healthy Habits</h1>
       <p class="hero-intro">Waarom alleen horen wat we te bieden hebben, als je het ook zelf kunt ervaren?</p>
       <form class="form" action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST">
         <input type="hidden" name="form_name" value="4-weken-proberen">
