test red body blue hero

--- a/4-weken-proberen.html
+++ b/4-weken-proberen.html
@@ -356,7 +356,7 @@
   </div>
 
   <!-- HERO -->
-  <section class="hero-section">
+  <section class="hero-section" style="background:blue;">
     <div class="container">
       <h1 style="color:blue;">4 weken proberen bij Healthy Habits</h1>
       <p class="hero-intro">Waarom alleen horen wat we te bieden hebben, als je het ook zelf kunt ervaren?</p>
