--- a/4-weken-proberen.html
+++ b/4-weken-proberen.html
@@ -331,7 +331,7 @@
     }
   </style>
 </head>
-<body style="background:red;">
+<body>
 
   <!-- HEADER -->
   <div class="topbar">
@@ -356,9 +356,9 @@
   </div>
 
   <!-- HERO -->
-  <section class="hero-section" style="background:blue;">
+  <section class="hero-section">
     <div class="container">
-      <h1 style="color:blue;">4 weken proberen bij Healthy Habits</h1>
+      <h1>4 weken proberen bij Healthy Habits</h1>
       <p class="hero-intro">Waarom alleen horen wat we te bieden hebben, als je het ook zelf kunt ervaren?</p>
       <form class="form" action="https://hooks.zapier.com/hooks/catch/16872475/ugntte5/" method="POST">
         <input type="hidden" name="form_name" value="4-weken-proberen">
