Add cache busting to assets

--- a/index.html
+++ b/index.html
@@ -1502,14 +1502,14 @@
 
   <!-- SPLASH SCREEN -->
   <div class="splash-screen" id="splashScreen">
-    <img src="assets/logo/HH logo.png" alt="Healthy Habits">
+    <img src="assets/logo/HH logo.png?v=20260123" alt="Healthy Habits">
   </div>
 
   <!-- TOPBAR -->
   <div class="topbar">
     <div class="container">
       <div class="topbar__logo">
-        <a href="nieuw-2025.html"><img src="assets/logo/HH logo.png" alt="Healthy Habits"></a>
+        <a href="nieuw-2025.html"><img src="assets/logo/HH logo.png?v=20260123" alt="Healthy Habits"></a>
       </div>
       <nav class="topbar__nav">
         <a href="ons-aanbod.html">Ons aanbod</a>
