Make hero text blue

--- a/index.html
+++ b/index.html
@@ -1534,8 +1534,8 @@
     <img src="assets/images/home/intake.jpg" alt="Healthy Habits sfeer">
     <div class="hero__overlay"></div>
     <div class="container hero-content">
-      <h1>Warm. Persoonlijk. Resultaatgericht.</h1>
-      <p>
+      <h1 style="color:blue;">Warm. Persoonlijk. Resultaatgericht.</h1>
+      <p style="color:blue;">
         Gefeliciteerd! Je hebt het gevonden, een stukje geluk in Eindhoven.
       </p>
       <div class="hero-buttons">
